@@ -1,39 +1,37 @@
 package ua.com.fielden.platform.basic.autocompleter;
 
-import static org.junit.Assert.*;
-
-import java.util.ArrayList;
-import java.util.List;
-
 import org.junit.Test;
 
 import ua.com.fielden.platform.test_entities.Entity;
 
+import java.util.List;
+import java.util.Set;
+
+import static org.junit.Assert.assertEquals;
+import static ua.com.fielden.platform.basic.autocompleter.PojoValueMatcher.matchByAnyPropPredicate;
+
 public class PojoValueMatcherTest {
 
-    private final List<Entity> entities = new ArrayList<>();
-    {
-        entities.add((Entity) new Entity().setKey("ORDINARY VALUE 1"));
-        entities.add((Entity) new Entity().setKey("ORDINARY VALUE 2"));
-        entities.add((Entity) new Entity().setKey("SPECIAL SYMBOL (hrs)"));
-        entities.add((Entity) new Entity().setKey("SPECIAL SYMBOL 2 *"));
-        entities.add((Entity) new Entity().setKey("Non special symbol --"));
-        entities.add((Entity) new Entity().setKey("MIxed CaSe"));
-        entities.add((Entity) new Entity().setKey("some more [symbols]"));
-        entities.add((Entity) new Entity().setKey("some more {symbols}"));
-        entities.add((Entity) new Entity().setKey("some more /symbols/"));
-        entities.add((Entity) new Entity().setKey("some more \\symbols\\"));
-    }
-    
+    private static final List<Entity> entities = List.of(
+        new Entity().setKey("ORDINARY VALUE 1").setDesc("Description 1"),
+        new Entity().setKey("ORDINARY VALUE 2").setDesc("Description 2"),
+        new Entity().setKey("SPECIAL SYMBOL (hrs)"),
+        new Entity().setKey("SPECIAL SYMBOL 2 *").setDesc("Description *"),
+        new Entity().setKey("Non special symbol --"),
+        new Entity().setKey("MIxed CaSe"),
+        new Entity().setKey("some more [symbols]"),
+        new Entity().setKey("some more {symbols}"),
+        new Entity().setKey("some more /symbols/"),
+        new Entity().setKey("some more \\symbols\\"));
+
     @Test
     public void exact_search_for_a_single_value_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
         final List<Entity> result = pvm.findMatches("ORDINARY VALUE 1");
         assertEquals(1, result.size());
-        assertEquals(entities.get(0), result.get(0));
-        //Pattern.quote(
+        assertEquals(entities.getFirst(), result.getFirst());
     }
-    
+
     @Test
     public void wildcard_search_for_UPPERCASED_values_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
@@ -42,7 +40,7 @@ public class PojoValueMatcherTest {
         assertEquals(entities.get(0), result.get(0));
         assertEquals(entities.get(1), result.get(1));
     }
-    
+
     @Test
     public void wildcard_search_for_mixed_case_values_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
@@ -50,7 +48,7 @@ public class PojoValueMatcherTest {
         assertEquals(1, result.size());
         assertEquals(entities.get(5), result.get(0));
     }
-    
+
     @Test
     public void exact_search_for_a_value_with_special_char_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
@@ -58,7 +56,7 @@ public class PojoValueMatcherTest {
         assertEquals(1, result.size());
         assertEquals(entities.get(2), result.get(0));
     }
-    
+
     @Test
     public void exact_search_for_a_value_with_another_special_char_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
@@ -66,24 +64,24 @@ public class PojoValueMatcherTest {
         assertEquals(1, result.size());
         assertEquals(entities.get(3), result.get(0));
     }
-    
+
     @Test
-    public void whild_search_for_a_value_with_special_chars_is_supported() {
+    public void wild_search_for_a_value_with_special_chars_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
         final List<Entity> result = pvm.findMatches("SPECIAL SYMBOL %");
         assertEquals(2, result.size());
         assertEquals(entities.get(2), result.get(0));
         assertEquals(entities.get(3), result.get(1));
     }
-    
+
     @Test
-    public void whild_search_for_a_value_with_dashes_is_supported() {
+    public void wild_search_for_a_value_with_dashes_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
         final List<Entity> result = pvm.findMatches("%-%");
         assertEquals(1, result.size());
         assertEquals(entities.get(4), result.get(0));
     }
-    
+
     @Test
     public void exact_search_for_a_value_with_bracket_chars_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
@@ -99,7 +97,7 @@ public class PojoValueMatcherTest {
         assertEquals(1, result.size());
         assertEquals(entities.get(7), result.get(0));
     }
-    
+
     @Test
     public void exact_search_for_a_value_with_forward_slash_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
@@ -107,7 +105,7 @@ public class PojoValueMatcherTest {
         assertEquals(1, result.size());
         assertEquals(entities.get(8), result.get(0));
     }
-    
+
     @Test
     public void exact_search_for_a_value_with_back_slash_is_supported() {
         final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, "key", entities.size());
@@ -116,5 +114,32 @@ public class PojoValueMatcherTest {
         assertEquals(entities.get(9), result.get(0));
     }
 
+    @Test
+    public void exact_search_by_key_and_desc_is_supported() {
+        final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, matchByAnyPropPredicate(Set.of("key", "desc")), entities.size());
+        final List<Entity> result1 = pvm.findMatches("description 1");
+        assertEquals(1, result1.size());
+        assertEquals(entities.get(0), result1.get(0));
+
+        final List<Entity> result2 = pvm.findMatches("SPECIAL SYMBOL (hrs)");
+        assertEquals(1, result2.size());
+        assertEquals(entities.get(2), result2.get(0));
+    }
+
+    @Test
+    public void wild_search_by_key_and_desc_is_supported() {
+        final PojoValueMatcher<Entity> pvm = new PojoValueMatcher<>(entities, matchByAnyPropPredicate(Set.of("key", "desc")), entities.size());
+        final List<Entity> result1 = pvm.findMatches("descri%");
+        assertEquals(3, result1.size());
+        assertEquals(entities.get(0), result1.get(0));
+        assertEquals(entities.get(1), result1.get(1));
+        assertEquals(entities.get(3), result1.get(2));
+
+        final List<Entity> result = pvm.findMatches("%SPECIAL%");
+        assertEquals(3, result.size());
+        assertEquals(entities.get(2), result.get(0));
+        assertEquals(entities.get(3), result.get(1));
+        assertEquals(entities.get(4), result.get(2));
+    }
 
 }
